onyxia-api/src/test/resources/kubernetes-manifest/k8s-httproute-no-hostnames.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jupyter-python-3574-ui
spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /lab
      backendRefs:
        - name: jupyter-python-3574
          port: 8888
